--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Moonlight Tales - Magical Bedtime Stories</title>
     <meta name="description" content="AI-powered bedtime stories for children with a touch of magic and wonder" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="" />
 
     <meta property="og:title" content="Moonlight Tales - Magical Bedtime Stories" />
     <meta property="og:description" content="AI-powered bedtime stories for children with a touch of magic and wonder" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="" />
+    <meta name="twitter:image" content="" />
 
     <!-- Child-friendly fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
